Wed Sep 19 01:42:13 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.c, gnome-ditem-edit.c: eeek, exported an
	  internal function.

Tue Sep 18 23:11:33 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Few more accessors, whack the push/pop
	  of sections.  Keys can now include sections, add actual error
	  returns

	* gnome-ditem-edit.[ch]: whack crack entries, make compile, and port
	  to new desktop item.

	* Makefile.am: add the ditem-edit

Sat Sep 08 01:55:29 2001  George Lebl <jirka@5z.com>

	* All bonobo stuff.  Removed for now.  This is in bonobo somewhere
	  now anyway.

	* Makefile.am: Fixup for the current no-bonobo build

	* gnome-desktop-item.[ch], test-ditem.c:  Made loading/saving work
	  and add tests

	* gnome-ditem-edit.[ch]: Add this, currently the same version that
	  was the last working one in libgnomeui HEAD.  Doesn't compile nor
	  work with the ditem yet.

Fri Sep 07 21:43:34 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Put the parser into the ditem, completely
	  reshuffle the API, make it be much more anal about how it reads
	  files, simplify internal storage, and follow the spec more closely,
	  not api nor implementation complete.  Still needs a lot of work.
	  A .desktop moniker should rather be based upon this API rather
	  then being beneath it.  However that's very low on my priority list
	  right now.  But it should be simpler then before I'd think, and
	  you'd get actual spec compliant reading/writing.

Tue Sep 04 23:06:06 2001  George Lebl <jirka@5z.com>

	* Makefile.am, gnome-desktop-item.[ch]: Mostly stubify things with
	  #if 0's just to make it compile.  I will be changing the whole
	  structure of this shortly and simplifying the interface a lot
	  it seems to have grown quite a bit.

2001-08-21  Martin Baulig  <baulig@suse.de>

	* bonobo-config-ditem.c (get_encoding): If we can't determine the encoding,
	suck the whole file in and pipe it through g_utf8_validate().