@@ -1,3 +1,7 @@
+Thu Sep 20 15:15:54 2001  George Lebl <jirka@5z.com>
+
+	* gnome-desktop-item.[ch]: string vector const weirdness removed
+
 Wed Sep 19 01:42:13 2001  George Lebl <jirka@5z.com>
 
 	* gnome-desktop-item.c, gnome-ditem-edit.c: eeek, exported an
